--- a/client/src/app/core/components/navigation/navigation.component.html
+++ b/client/src/app/core/components/navigation/navigation.component.html
@@ -29,6 +29,7 @@
                         (click)="onSignOut()">
                         <mat-icon>logout</mat-icon>
                     </button>
+                    <!-- TODO: Add user menu -->
                 </div>
             </div>
         </div>
