--- a/client/src/app/shared/components/back-button/back-button.component.html
+++ b/client/src/app/shared/components/back-button/back-button.component.html
@@ -3,6 +3,6 @@
         mat-button
         (click)="onBack()">
         <mat-icon>{{ icon }}</mat-icon>
-        <span>{{ label }}</span>
+        <span>{{ label | translate }}</span>
     </button>
 </div>
