--- a/client/src/app/team/components/lists/team-member-list/team-member-list.component.html
+++ b/client/src/app/team/components/lists/team-member-list/team-member-list.component.html
@@ -1,5 +1,5 @@
 <div class="team-member-container">
-    <ng-container *ngIf="members$ | loading | async as items">
+    <ng-container *ngIf="members$ | loadingList | async as items">
         <ng-template [ngIf]="items?.value">
             <mat-list>
                 <mat-list-item
