Implement Create and Update team functionality, add store functionality.

--- a/client/src/app/core/components/navigation/navigation.component.html
+++ b/client/src/app/core/components/navigation/navigation.component.html
@@ -2,7 +2,8 @@
     <mat-toolbar *ngIf="isMobileLayout$ | async | isFalse">
         <div class="navigation">
             <div class="title">
-                <h1>SCRUM Helper</h1>
+                <!-- TODO: Add app title -->
+                <!-- <h1>SCRUM Helper</h1> -->
             </div>
             <div class="actions">
                 <div class="main">
