--- a/client/src/app/team/components/cards/teams/teams.component.html
+++ b/client/src/app/team/components/cards/teams/teams.component.html
@@ -12,7 +12,7 @@
             <button
                 mat-button
                 color="primary"
-                (click)="onNavigateToCreateTeam()">
+                (click)="onOpenCreateTeam()">
                 <mat-icon>group_add</mat-icon>
                 <span>{{ 'buttons.create' | translate }}</span>
             </button>
