--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -11,6 +11,7 @@
 @use 'styles/components/list';
 @use 'styles/components/form';
 @use 'styles/components/button';
+@use 'styles/components/title';
 
 @include mat.core();
 
