--- a/client/src/app/core/components/side-navigation/side-navigation.component.html
+++ b/client/src/app/core/components/side-navigation/side-navigation.component.html
@@ -5,9 +5,9 @@
         <mat-drawer
             #drawer
             [mode]="mode">
-            <div class="title">
+            <!-- <div class="title">
                 <h2>Scrum Helper</h2>
-            </div>
+            </div> -->
             <mat-list>
                 <mat-list-item
                     *ngFor="let item of navigationItems"
