--- a/client/src/app/core/components/side-navigation/side-navigation.component.scss
+++ b/client/src/app/core/components/side-navigation/side-navigation.component.scss
@@ -21,7 +21,7 @@
 
                 .navigation-item {
                     &.active {
-                        // TODO: Add active color
+                        // TODO: Add active colors
                         // background-color: variables.$accent-color;
                     }
                 }
