--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -14,6 +14,7 @@
 @use 'styles/components/button';
 @use 'styles/components/title';
 @use 'styles/components/dialog';
+@use 'styles/components/stepper';
 
 @include mat.core();
 
