--- a/client/src/app/shared/components/empty-data/empty-data.component.html
+++ b/client/src/app/shared/components/empty-data/empty-data.component.html
@@ -1,4 +1,4 @@
 <div class="empty-data">
     <mat-icon color="primary">{{ icon }}</mat-icon>
-    <span>{{ text }}</span>
+    <span>{{ text_key | translate }}</span>
 </div>
