Add global loader, add details component, update sprint wizard, update styles, refactor shared module.

--- a/client/src/app/estimation/components/cards/sprint-wizard/sprint-wizard.component.html
+++ b/client/src/app/estimation/components/cards/sprint-wizard/sprint-wizard.component.html
@@ -8,122 +8,168 @@
         <mat-card-content>
             <mat-stepper
                 linear
-                #stepper
+                #sprintWizardStepper
+                labelPosition="bottom"
+                [orientation]="(isMobileLayout$ | async) ? 'vertical' : 'horizontal'"
                 class="stepper-container">
                 <mat-step [stepControl]="sprintForm">
-                    <ng-template matStepLabel>Sprint information</ng-template>
-                    <form
-                        class="form grid-1"
-                        [formGroup]="sprintForm">
-                        <app-shared-input
-                            [form]="sprintForm"
-                            [control]="nameControl"
-                            name="name"
-                            label="Sprint name"
-                            [classList]="['field']">
-                        </app-shared-input>
+                    <ng-template matStepLabel>General information</ng-template>
+                    <ng-template matStepContent>
+                        <div class="content">
+                            <form
+                                class="form grid-1"
+                                [formGroup]="sprintForm">
+                                <app-shared-input
+                                    [form]="sprintForm"
+                                    [control]="nameControl"
+                                    name="name"
+                                    label="Sprint name"
+                                    [classList]="['field']">
+                                </app-shared-input>
 
-                        <app-shared-date
-                            [form]="sprintForm"
-                            [control]="startDateControl"
-                            name="startDate"
-                            label="Start date"
-                            hint="mm/dd/yyyy"
-                            [classList]="['field']">
-                        </app-shared-date>
+                                <app-shared-date
+                                    [form]="sprintForm"
+                                    [control]="startDateControl"
+                                    name="startDate"
+                                    label="Start date"
+                                    hint="mm/dd/yyyy"
+                                    [classList]="['field']">
+                                </app-shared-date>
 
-                        <app-shared-date
-                            [form]="sprintForm"
-                            [control]="endDateControl"
-                            name="endDate"
-                            label="End date"
-                            hint="mm/dd/yyyy"
-                            [classList]="['field']">
-                        </app-shared-date>
+                                <app-shared-date
+                                    [form]="sprintForm"
+                                    [control]="endDateControl"
+                                    name="endDate"
+                                    label="End date"
+                                    hint="mm/dd/yyyy"
+                                    [classList]="['field']">
+                                </app-shared-date>
 
-                        <app-shared-textarea
-                            [form]="sprintForm"
-                            [control]="descriptionControl"
-                            name="description"
-                            label="Sprint goal"
-                            [classList]="['field']">
-                        </app-shared-textarea>
-                    </form>
-                    <div class="actions">
-                        <button
-                            mat-button
-                            matStepperNext>
-                            Next
-                        </button>
-                    </div>
+                                <app-shared-textarea
+                                    [form]="sprintForm"
+                                    [control]="descriptionControl"
+                                    name="description"
+                                    label="Sprint goal"
+                                    [classList]="['field']">
+                                </app-shared-textarea>
+                            </form>
+                        </div>
+                        <div class="actions">
+                            <button
+                                color="accent"
+                                mat-button
+                                matStepperNext>
+                                <mat-icon></mat-icon>
+                                Next
+                            </button>
+                        </div>
+                    </ng-template>
                 </mat-step>
                 <mat-step>
                     <ng-template matStepLabel>Team working days</ng-template>
-                    <ng-container *ngIf="team$ | loading | async as item">
-                        <ng-template [ngIf]="item.value">
-                            <div *ngFor="let member of item.value.members">
-                                {{ member.name }}
-                            </div>
-                        </ng-template>
-                        <ng-template [ngIf]="item.loading"> loading... </ng-template>
-                        <ng-template [ngIf]="!item?.value && !item.loading">
-                            <app-empty-data icon="person"></app-empty-data>
-                        </ng-template>
-                    </ng-container>
-                    <div class="actions">
-                        <button
-                            mat-button
-                            matStepperPrevious>
-                            Back
-                        </button>
-                        <button
-                            mat-button
-                            matStepperNext>
-                            Next
-                        </button>
-                    </div>
+                    <ng-template matStepContent>
+                        <div class="content">
+                            <ng-container *ngIf="team$ | async">
+                                <ng-container *ngFor="let item of teamCapacityMembers">
+                                    <div>
+                                        {{ item.member.name }}
+                                        {{ item.member.role }}
+                                    </div>
+                                    <form
+                                        class="form grid-1"
+                                        [formGroup]="item.form">
+                                        <app-shared-input
+                                            [form]="item.form"
+                                            name="daysCapacity"
+                                            label="Working days"
+                                            [classList]="['field']"
+                                            [validators]="teamCapacityValidators">
+                                        </app-shared-input>
+                                        <app-shared-input
+                                            [form]="item.form"
+                                            name="pointsCapacity"
+                                            label="Sprint points"
+                                            [classList]="['field']"
+                                            [validators]="teamCapacityValidators">
+                                        </app-shared-input>
+                                    </form>
+                                </ng-container>
+                            </ng-container>
+                        </div>
+                        <div class="actions">
+                            <button
+                                color="primary"
+                                mat-button
+                                matStepperPrevious>
+                                Back
+                            </button>
+                            <button
+                                color="accent"
+                                mat-button
+                                (click)="goToSprintCapacity()">
+                                Next
+                            </button>
+                        </div>
+                    </ng-template>
                 </mat-step>
                 <mat-step [stepControl]="sprintCapacityForm">
                     <ng-template matStepLabel>Sprint capacity</ng-template>
-                    <form
-                        class="form grid-1"
-                        [formGroup]="sprintCapacityForm">
-                        <app-shared-input
-                            [form]="sprintCapacityForm"
-                            [control]="spritCapacityControl"
-                            name="spritCapacity"
-                            label="Sprint Capacity (Days)"
-                            [classList]="['field']">
-                        </app-shared-input>
-                    </form>
-                    <div class="actions">
-                        <button
-                            mat-button
-                            matStepperPrevious>
-                            Back
-                        </button>
-                        <button
-                            mat-button
-                            matStepperNext>
-                            Next
-                        </button>
-                    </div>
+                    <ng-template matStepContent>
+                        <div class="content">
+                            <form
+                                class="form grid-1"
+                                [formGroup]="sprintCapacityForm">
+                                <app-shared-input
+                                    [form]="sprintCapacityForm"
+                                    [control]="spritCapacityControl"
+                                    name="spritCapacity"
+                                    label="Sprint Capacity (Days)"
+                                    [classList]="['field']">
+                                </app-shared-input>
+                            </form>
+                            <div class="actions">
+                                <button
+                                    color="primary"
+                                    mat-button
+                                    matStepperPrevious>
+                                    Back
+                                </button>
+                                <button
+                                    color="accent"
+                                    mat-button
+                                    matStepperNext>
+                                    Next
+                                </button>
+                            </div>
+                        </div>
+                    </ng-template>
                 </mat-step>
                 <mat-step>
                     <ng-template matStepLabel>Summary</ng-template>
-                    <div class="actions">
-                        <button
-                            mat-button
-                            matStepperPrevious>
-                            Back
-                        </button>
-                        <button
-                            mat-button
-                            (click)="stepper.reset()">
-                            Reset
-                        </button>
-                        <button mat-button>Create Sprint</button>
-                    </div>
+                    <ng-template matStepContent>
+                        <div class="content">
+                            
+                        </div>
+                        <div class="actions">
+                            <button
+                                color="primary"
+                                mat-button
+                                matStepperPrevious>
+                                Back
+                            </button>
+                            <button
+                                color="primary"
+                                mat-button
+                                (click)="resetStepper()">
+                                Reset
+                            </button>
+                            <button
+                                color="accent"
+                                mat-flat-button>
+                                Create Sprint
+                            </button>
+                        </div>
+                    </ng-template>
                 </mat-step>
             </mat-stepper>
         </mat-card-content>
