--- a/client/src/app/estimation/components/cards/sprints/sprints.component.scss
+++ b/client/src/app/estimation/components/cards/sprints/sprints.component.scss
@@ -4,7 +4,7 @@
     @include mixins.flex-column();
     @include mixins.full-height-width();
 
-    .teams-container {
+    .sprints-container {
         @include mixins.flex-column();
         @include mixins.full-height-width();
 
