--- a/client/src/app/estimation/components/lists/sprint/sprint.component.html
+++ b/client/src/app/estimation/components/lists/sprint/sprint.component.html
@@ -19,7 +19,7 @@
             </app-list-loading>
         </ng-template>
         <ng-template [ngIf]="!items?.value?.length && !items.loading">
-            <app-empty-data icon="analytics"></app-empty-data>
+            <app-shared-empty-data icon="analytics"></app-shared-empty-data>
         </ng-template>
     </ng-container>
 </div>
