--- a/client/src/app/shared/components/list-loading/list-loading.component.scss
+++ b/client/src/app/shared/components/list-loading/list-loading.component.scss
@@ -1,7 +1,7 @@
 @use 'variables';
 
 :host {
-    .loading-list {
+    .loading-list-container {
         .loading-list-item {
             .figure-1,
             mat-icon {
