--- a/client/src/app/team/components/cards/teams/teams.component.html
+++ b/client/src/app/team/components/cards/teams/teams.component.html
@@ -10,8 +10,8 @@
         </mat-card-content>
         <mat-card-actions align="end">
             <button
+                color="accent"
                 mat-button
-                color="primary"
                 (click)="onOpenCreateTeam()">
                 <mat-icon>group_add</mat-icon>
                 <span>{{ 'common.button.create' | translate }}</span>
