--- a/client/src/app/team/components/lists/team-list/team-list.component.html
+++ b/client/src/app/team/components/lists/team-list/team-list.component.html
@@ -21,7 +21,7 @@
             </app-list-loading>
         </ng-template>
         <ng-template [ngIf]="!items?.length && !isLoading">
-            <app-empty-data icon="groups"></app-empty-data>
+            <app-shared-empty-data icon="groups"></app-shared-empty-data>
         </ng-template>
     </ng-container>
 </div>
