--- a/client/src/app/estimation/components/lists/team/team.component.html
+++ b/client/src/app/estimation/components/lists/team/team.component.html
@@ -20,7 +20,7 @@
             </app-list-loading>
         </ng-template>
         <ng-template [ngIf]="!items?.value?.length && !items.loading">
-            <app-empty-data icon="groups"></app-empty-data>
+            <app-shared-empty-data icon="groups"></app-shared-empty-data>
         </ng-template>
     </ng-container>
 </div>
