--- a/client/src/app/shared/components/list-loading/list-loading.component.html
+++ b/client/src/app/shared/components/list-loading/list-loading.component.html
@@ -1,4 +1,4 @@
-<mat-list class="loading-list">
+<mat-list class="loading-list-container">
     <mat-list-item
         class="loading-list-item"
         *ngFor="let item of [].constructor(itemsLength); let i = index">
