--- a/client/src/app/team/components/dialogs/create-update-team/create-update-team.component.html
+++ b/client/src/app/team/components/dialogs/create-update-team/create-update-team.component.html
@@ -70,6 +70,7 @@
     </mat-dialog-content>
     <mat-dialog-actions align="end">
         <button
+            color="primary"
             mat-button
             (click)="onClose()">
             {{ 'common.button.cancel' | translate }}
