--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -9,3 +9,5 @@ $white-color: rgb(255, 255, 255);
 $black-color: rgb(0, 0, 0);
 
 $light-grey: rgba(0, 0, 0, 0.1);
+$light-grey-text: rgba(0, 0, 0, 0.6);
+$dark-grey-text: rgba(0, 0, 0, 0.8);
